Grammar/.antlr/GrammarParser.java
// Generated from /Users/helenarestorff/Dropbox/DTU/Kandidat/4.semester/Speciale/cbpmc4fun_python/Grammar/Grammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, TRUE=4, FALSE=5, IF=6, ELSE=7, WHILE=8, LPAR=9, 
		RPAR=10, LSPAR=11, RSPAR=12, LCPAR=13, RCPAR=14, ASS=15, NEQ=16, GEQ=17, 
		LEQ=18, AND=19, OR=20, DOTMINUS=21, RANGE=22, ARROW=23, GT=24, LT=25, 
		TIMES=26, DIV=27, PLUS=28, MINUS=29, SEQ=30, NEG=31, EQ=32, UNIF=33, SKIIP=34, 
		COMMENT=35, MULTILINECOMMENT=36, INT=37, FLOAT=38, WHITESPACE=39, NEWLINE=40, 
		VAR=41, CHAR=42;
	public static final int
		RULE_program = 0, RULE_postexpectation = 1, RULE_preexpectation = 2, RULE_inits = 3, 
		RULE_expression = 4, RULE_aexpectation = 5, RULE_bexpression = 6, RULE_bexpectation = 7, 
		RULE_command = 8, RULE_expectation = 9, RULE_aexppar = 10, RULE_expectation0 = 11, 
		RULE_constraint = 12, RULE_initialization = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "postexpectation", "preexpectation", "inits", "expression", 
			"aexpectation", "bexpression", "bexpectation", "command", "expectation", 
			"aexppar", "expectation0", "constraint", "initialization"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'post:'", "'pre:'", "'init:'", "'true'", "'false'", "'if'", "'else'", 
			"'while'", "'('", "')'", "'['", "']'", "'{'", "'}'", "':='", "'!='", 
			"'>='", "'<='", "'&&'", "'||'", "'.-'", "'..'", "'->'", "'>'", "'<'", 
			"'*'", "'/'", "'+'", "'-'", "';'", "'!'", "'='", "'unif'", "'skip'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "TRUE", "FALSE", "IF", "ELSE", "WHILE", "LPAR", 
			"RPAR", "LSPAR", "RSPAR", "LCPAR", "RCPAR", "ASS", "NEQ", "GEQ", "LEQ", 
			"AND", "OR", "DOTMINUS", "RANGE", "ARROW", "GT", "LT", "TIMES", "DIV", 
			"PLUS", "MINUS", "SEQ", "NEG", "EQ", "UNIF", "SKIIP", "COMMENT", "MULTILINECOMMENT", 
			"INT", "FLOAT", "WHITESPACE", "NEWLINE", "VAR", "CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PGCLProgramContext extends ProgramContext {
		public CommandContext cmd;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public PGCLProgramContext(ProgramContext ctx) { copyFrom(ctx); }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			_localctx = new PGCLProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((PGCLProgramContext)_localctx).cmd = command(0);
			setState(29);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostexpectationContext extends ParserRuleContext {
		public PostexpectationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postexpectation; }
	 
		public PostexpectationContext() { }
		public void copyFrom(PostexpectationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PostExpectationContext extends PostexpectationContext {
		public ExpectationContext exp;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public ExpectationContext expectation() {
			return getRuleContext(ExpectationContext.class,0);
		}
		public PostExpectationContext(PostexpectationContext ctx) { copyFrom(ctx); }
	}

	public final PostexpectationContext postexpectation() throws RecognitionException {
		PostexpectationContext _localctx = new PostexpectationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_postexpectation);
		try {
			_localctx = new PostExpectationContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(T__0);
			setState(32);
			((PostExpectationContext)_localctx).exp = expectation();
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreexpectationContext extends ParserRuleContext {
		public PreexpectationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preexpectation; }
	 
		public PreexpectationContext() { }
		public void copyFrom(PreexpectationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PreExpectationContext extends PreexpectationContext {
		public ConstraintContext cons;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public PreExpectationContext(PreexpectationContext ctx) { copyFrom(ctx); }
	}

	public final PreexpectationContext preexpectation() throws RecognitionException {
		PreexpectationContext _localctx = new PreexpectationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_preexpectation);
		try {
			_localctx = new PreExpectationContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(T__1);
			setState(36);
			((PreExpectationContext)_localctx).cons = constraint();
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitsContext extends ParserRuleContext {
		public InitsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inits; }
	 
		public InitsContext() { }
		public void copyFrom(InitsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InitializationsContext extends InitsContext {
		public InitializationContext init;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public InitializationContext initialization() {
			return getRuleContext(InitializationContext.class,0);
		}
		public InitializationsContext(InitsContext ctx) { copyFrom(ctx); }
	}

	public final InitsContext inits() throws RecognitionException {
		InitsContext _localctx = new InitsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inits);
		try {
			_localctx = new InitializationsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__2);
			setState(40);
			((InitializationsContext)_localctx).init = initialization(0);
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultDivExprContext extends ExpressionContext {
		public ExpressionContext expr1;
		public Token op;
		public ExpressionContext expr2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode TIMES() { return getToken(GrammarParser.TIMES, 0); }
		public TerminalNode DIV() { return getToken(GrammarParser.DIV, 0); }
		public MultDivExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class PlusMinusDotminusExprContext extends ExpressionContext {
		public ExpressionContext expr1;
		public Token op;
		public ExpressionContext expr2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(GrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(GrammarParser.MINUS, 0); }
		public TerminalNode DOTMINUS() { return getToken(GrammarParser.DOTMINUS, 0); }
		public PlusMinusDotminusExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprContext extends ExpressionContext {
		public ExpressionContext expr;
		public TerminalNode LPAR() { return getToken(GrammarParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(GrammarParser.RPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class VarExprContext extends ExpressionContext {
		public Token var;
		public TerminalNode VAR() { return getToken(GrammarParser.VAR, 0); }
		public VarExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class IntExprContext extends ExpressionContext {
		public Token num;
		public TerminalNode INT() { return getToken(GrammarParser.INT, 0); }
		public IntExprContext(ExpressionContext ctx) { copyFrom(ctx); }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				_localctx = new IntExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(44);
				((IntExprContext)_localctx).num = match(INT);
				}
				break;
			case LPAR:
				{
				_localctx = new ExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(45);
				match(LPAR);
				setState(46);
				((ExprContext)_localctx).expr = expression(0);
				setState(47);
				match(RPAR);
				}
				break;
			case VAR:
				{
				_localctx = new VarExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(49);
				((VarExprContext)_localctx).var = match(VAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(60);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(58);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new MultDivExprContext(new ExpressionContext(_parentctx, _parentState));
						((MultDivExprContext)_localctx).expr1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(52);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(53);
						((MultDivExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==TIMES || _la==DIV) ) {
							((MultDivExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(54);
						((MultDivExprContext)_localctx).expr2 = expression(6);
						}
						break;
					case 2:
						{
						_localctx = new PlusMinusDotminusExprContext(new ExpressionContext(_parentctx, _parentState));
						((PlusMinusDotminusExprContext)_localctx).expr1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(55);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(56);
						((PlusMinusDotminusExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOTMINUS) | (1L << PLUS) | (1L << MINUS))) != 0)) ) {
							((PlusMinusDotminusExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(57);
						((PlusMinusDotminusExprContext)_localctx).expr2 = expression(5);
						}
						break;
					}
					} 
				}
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AexpectationContext extends ParserRuleContext {
		public AexpectationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aexpectation; }
	 
		public AexpectationContext() { }
		public void copyFrom(AexpectationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarAExpContext extends AexpectationContext {
		public Token var;
		public TerminalNode VAR() { return getToken(GrammarParser.VAR, 0); }
		public VarAExpContext(AexpectationContext ctx) { copyFrom(ctx); }
	}
	public static class ExprAExpContext extends AexpectationContext {
		public AexpectationContext aexp;
		public TerminalNode LPAR() { return getToken(GrammarParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(GrammarParser.RPAR, 0); }
		public AexpectationContext aexpectation() {
			return getRuleContext(AexpectationContext.class,0);
		}
		public ExprAExpContext(AexpectationContext ctx) { copyFrom(ctx); }
	}
	public static class PlusMinusDotminusAExpContext extends AexpectationContext {
		public AexpectationContext aexp1;
		public Token op;
		public AexpectationContext aexp2;
		public List<AexpectationContext> aexpectation() {
			return getRuleContexts(AexpectationContext.class);
		}
		public AexpectationContext aexpectation(int i) {
			return getRuleContext(AexpectationContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(GrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(GrammarParser.MINUS, 0); }
		public TerminalNode DOTMINUS() { return getToken(GrammarParser.DOTMINUS, 0); }
		public PlusMinusDotminusAExpContext(AexpectationContext ctx) { copyFrom(ctx); }
	}
	public static class IntAExpContext extends AexpectationContext {
		public Token num;
		public TerminalNode INT() { return getToken(GrammarParser.INT, 0); }
		public IntAExpContext(AexpectationContext ctx) { copyFrom(ctx); }
	}
	public static class RealAExpContext extends AexpectationContext {
		public Token num;
		public TerminalNode FLOAT() { return getToken(GrammarParser.FLOAT, 0); }
		public RealAExpContext(AexpectationContext ctx) { copyFrom(ctx); }
	}
	public static class MultDivAExpContext extends AexpectationContext {
		public AexpectationContext aexp1;
		public Token op;
		public AexpectationContext aexp2;
		public List<AexpectationContext> aexpectation() {
			return getRuleContexts(AexpectationContext.class);
		}
		public AexpectationContext aexpectation(int i) {
			return getRuleContext(AexpectationContext.class,i);
		}
		public TerminalNode TIMES() { return getToken(GrammarParser.TIMES, 0); }
		public TerminalNode DIV() { return getToken(GrammarParser.DIV, 0); }
		public MultDivAExpContext(AexpectationContext ctx) { copyFrom(ctx); }
	}

	public final AexpectationContext aexpectation() throws RecognitionException {
		return aexpectation(0);
	}

	private AexpectationContext aexpectation(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AexpectationContext _localctx = new AexpectationContext(_ctx, _parentState);
		AexpectationContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_aexpectation, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAR:
				{
				_localctx = new ExprAExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(64);
				match(LPAR);
				setState(65);
				((ExprAExpContext)_localctx).aexp = aexpectation(0);
				setState(66);
				match(RPAR);
				}
				break;
			case INT:
				{
				_localctx = new IntAExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(68);
				((IntAExpContext)_localctx).num = match(INT);
				}
				break;
			case FLOAT:
				{
				_localctx = new RealAExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(69);
				((RealAExpContext)_localctx).num = match(FLOAT);
				}
				break;
			case VAR:
				{
				_localctx = new VarAExpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(70);
				((VarAExpContext)_localctx).var = match(VAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(79);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new MultDivAExpContext(new AexpectationContext(_parentctx, _parentState));
						((MultDivAExpContext)_localctx).aexp1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_aexpectation);
						setState(73);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(74);
						((MultDivAExpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==TIMES || _la==DIV) ) {
							((MultDivAExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(75);
						((MultDivAExpContext)_localctx).aexp2 = aexpectation(7);
						}
						break;
					case 2:
						{
						_localctx = new PlusMinusDotminusAExpContext(new AexpectationContext(_parentctx, _parentState));
						((PlusMinusDotminusAExpContext)_localctx).aexp1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_aexpectation);
						setState(76);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(77);
						((PlusMinusDotminusAExpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOTMINUS) | (1L << PLUS) | (1L << MINUS))) != 0)) ) {
							((PlusMinusDotminusAExpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(78);
						((PlusMinusDotminusAExpContext)_localctx).aexp2 = aexpectation(6);
						}
						break;
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
